--- a/diario_de_bordo/MAIN_BRONZE.ipynb
+++ b/diario_de_bordo/MAIN_BRONZE.ipynb
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "url_file = \"https://raw.githubusercontent.com/LeonardoMares/code_elevate/refs/heads/main/diario_de_bordo/scr_data/info_transportes.csv"\n",
+    "url_file = \"https://raw.githubusercontent.com/LeonardoMares/code_elevate/refs/heads/main/diario_de_bordo/scr_data/info_transportes.csv\\\"\n",
     "local_path = \"/tmp/info_transportes.csv\""
    ]
   },
